--- a/README
+++ b/README
@@ -1,3 +1,7 @@
-HTTP Proxy Arhive
+HTTP Proxy Archive
+
+This is experiment to extend HTTP::Proxy with automatic proxy.pac generation and http digest authentication
+
+Test it with with Google Chrome:
 
 $ google-chrome --user-data-dir=/tmp/chrome/ --proxy-pac-url=http://193.198.212.253:1234/proxy.pac
